--- a/LoadingScreen.resx
+++ b/LoadingScreen.resx
@@ -20043,4 +20043,7 @@
         CUtYwhKWsIQlLGEJS1jCEpawhOX/KYvxL1M9yess3w9wAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="LoadingBarTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
